--- a/All/vm-calculator/calculator.html
+++ b/All/vm-calculator/calculator.html
@@ -13,8 +13,8 @@
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
   
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="calculator.css">
+    <script src="calculator.js"></script>
     <title>Document</title>
 </head>
 <body>
